@@ -17,6 +17,7 @@ import java.util.UUID;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
+import jakarta.servlet.http.HttpServletRequest;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.security.access.AccessDeniedException;
@@ -398,15 +399,17 @@ public class UserController {
         if (Objects.isNull(user)) {
             user = new EntraUserDto();
         }
+        if (Objects.nonNull(userDetailsForm.getEmail()) && !userDetailsForm.getEmail().isEmpty()) {
+            if (userService.userExistsByEmail(userDetailsForm.getEmail())) {
+                result.rejectValue("email", "error.email", "Email address already exists");
+            }
 
-        if (userService.userExistsByEmail(userDetailsForm.getEmail())) {
-            result.rejectValue("email", "error.email", "Email address already exists");
+            if (!emailValidationService.isValidEmailDomain(userDetailsForm.getEmail())) {
+                result.rejectValue("email", "email.invalidDomain",
+                        "The email address domain is not valid or cannot receive emails.");
+            }
         }
 
-        if (!emailValidationService.isValidEmailDomain(userDetailsForm.getEmail())) {
-            result.rejectValue("email", "email.invalidDomain",
-                    "The email address domain is not valid or cannot receive emails.");
-        }
 
         if (result.hasErrors()) {
             log.debug("Validation errors occurred while creating user: {}", result.getAllErrors());
@@ -449,6 +452,13 @@ public class UserController {
         if (existingForm != null) {
             firmSearchForm = existingForm;
             session.removeAttribute("firmSearchForm");
+        } else if (session.getAttribute("firm") != null) {
+            // Grab firm search details from session firm if coming here from the confirmation screen.
+            FirmDto firm = (FirmDto) session.getAttribute("firm");
+            firmSearchForm = FirmSearchForm.builder()
+                    .selectedFirmId(firm.getId())
+                    .firmSearch(firm.getName())
+                    .build();
         }
         int validatedCount = Math.max(10, Math.min(count, 100));
         model.addAttribute("firmSearchForm", firmSearchForm);
@@ -717,27 +727,33 @@ public class UserController {
     @PreAuthorize("@accessControlService.canEditUser(#id)")
     public String editUserApps(@PathVariable String id,
                                @RequestParam(value = "errorMessage", required = false) String errorMessage,
-                               Model model, HttpSession session) {
+                               Model model, HttpSession session, Authentication authentication) {
+        UserProfile currentUserProfile = loginService.getCurrentProfile(authentication);
         UserProfileDto user = userService.getUserProfileById(id).orElseThrow();
         UserType userType = user.getUserType();
         Set<AppDto> userAssignedApps = userService.getUserAppsByUserId(id);
         List<AppDto> availableApps = userService.getAppsByUserType(userType);
+
+        List<AppDto> editableApps = availableApps.stream()
+                .filter(app -> roleAssignmentService.canUserAssignRolesForApp(currentUserProfile, app))
+                .toList();
+
         @SuppressWarnings("unchecked")
         Map<Integer, List<String>> selectedAppRole = (Map<Integer, List<String>>) session.getAttribute("editUserAllSelectedRoles");
         if (Objects.isNull(selectedAppRole)) {
             // Add selected attribute to available apps based on user assigned apps
-            availableApps.forEach(app -> {
+            editableApps.forEach(app -> {
                 app.setSelected(userAssignedApps.stream()
                         .anyMatch(userApp -> userApp.getId().equals(app.getId())));
             });
         } else {
-            availableApps.forEach(app -> {
+            editableApps.forEach(app -> {
                 app.setSelected(selectedAppRole.containsKey(app.getId()));
             });
         }
 
         model.addAttribute("user", user);
-        model.addAttribute("apps", availableApps);
+        model.addAttribute("apps", editableApps);
         model.addAttribute(ModelAttributes.PAGE_TITLE, "Edit user services - " + user.getFullName());
         if (errorMessage != null) {
             model.addAttribute("errorMessage", errorMessage);
@@ -813,7 +829,7 @@ public class UserController {
         List<AppRoleDto> roles = userService.getAppRolesByAppIdAndUserType(selectedApps.get(currentSelectedAppIndex),
                 user.getUserType());
         UserProfile editorProfile = loginService.getCurrentProfile(authentication);
-        roles = roleAssignmentService.filterRoles(editorProfile.getAppRoles(), roles);
+        roles = roleAssignmentService.filterRoles(editorProfile.getAppRoles(), roles.stream().map(role -> UUID.fromString(role.getId())).toList());
         List<AppRoleDto> userRoles = userService.getUserAppRolesByUserId(id);
         @SuppressWarnings("unchecked")
         Map<Integer, List<String>> editUserAllSelectedRoles = (Map<Integer, List<String>>) session.getAttribute("editUserAllSelectedRoles");
@@ -915,7 +931,8 @@ public class UserController {
     @PreAuthorize("@accessControlService.canEditUser(#id)")
     public String editUserRolesCheckAnswer(@PathVariable String id,
                                            @RequestParam(value = "errorMessage", required = false) String errorMessage,
-                                           Model model, HttpSession session) {
+                                           Model model, HttpSession session, Authentication authentication) {
+        UserProfile editorUserProfile = loginService.getCurrentProfile(authentication);
         UserProfileDto user = userService.getUserProfileById(id).orElseThrow();
         @SuppressWarnings("unchecked")
         Map<Integer, List<String>> editUserAllSelectedRoles = (Map<Integer, List<String>>) session
@@ -926,7 +943,8 @@ public class UserController {
         UserType userType = user.getUserType();
         List<String> selectedApps = getListFromHttpSession(session, "selectedApps", String.class)
                 .orElseGet(ArrayList::new);
-        Map<String, AppDto> availableApps = userService.getAppsByUserType(userType).stream()
+        Map<String, AppDto> editableApps = userService.getAppsByUserType(userType).stream()
+                .filter(app -> roleAssignmentService.canUserAssignRolesForApp(editorUserProfile, app))
                 .filter(app -> selectedApps.contains(app.getId()))
                 .collect(Collectors.toMap(AppDto::getId, Function.identity()));
 
@@ -958,7 +976,17 @@ public class UserController {
                     }
                 } else {
                     UserRole userRole = new UserRole();
-                    userRole.setAppName(availableApps.get(selectedApps.get(key)).getName());
+                    if (selectedApps.size() <= key) {
+                        userRole.setAppName("Unknown app");
+                        String err = "Unknown app selected, please re-select apps";
+                        if (Objects.isNull(errorMessage)) {
+                            errorMessage = err;
+                        } else {
+                            errorMessage += " " + err;
+                        }
+                    } else {
+                        userRole.setAppName(editableApps.get(selectedApps.get(key)).getName());
+                    }
                     userRole.setRoleName("No Role selected");
                     userRole.setUrl(url);
                     selectedAppRole.add(userRole);
@@ -981,6 +1009,7 @@ public class UserController {
                                                  Authentication authentication) {
         UUID uuid = UUID.fromString(id);
 
+        UserProfile editorUserProfile = loginService.getCurrentProfile(authentication);
         UserProfileDto user = userService.getUserProfileById(id).orElseThrow();
         @SuppressWarnings("unchecked")
         Map<Integer, List<String>> allSelectedRolesByPage = (Map<Integer, List<String>>) session
@@ -991,10 +1020,15 @@ public class UserController {
         List<String> allSelectedRoles = allSelectedRolesByPage.values().stream().filter(Objects::nonNull)
                 .flatMap(List::stream)
                 .toList();
+        List<String> nonEditableRoles = userService.getUserAppRolesByUserId(id).stream()
+                .filter(role -> !roleAssignmentService.canUserAssignRolesForApp(editorUserProfile, role.getApp()))
+                .map(AppRoleDto::getId)
+                .toList();
         CurrentUserDto currentUserDto = loginService.getCurrentUser(authentication);
         UserProfile editorProfile = loginService.getCurrentProfile(authentication);
         if (roleAssignmentService.canAssignRole(editorProfile.getAppRoles(), allSelectedRoles)) {
-            Map<String, String> updateResult = userService.updateUserRoles(id, allSelectedRoles, currentUserDto.getUserId());
+            Map<String, String> updateResult = userService.updateUserRoles(id, allSelectedRoles,
+                    nonEditableRoles, currentUserDto.getUserId());
             if (updateResult.get("error") != null) {
                 String errorMessage = updateResult.get("error");
                 return "redirect:/admin/users/edit/" + uuid + "/roles-check-answer?errorMessage=" + errorMessage;
@@ -1239,20 +1273,25 @@ public class UserController {
     @GetMapping("/users/grant-access/{id}/apps")
     @PreAuthorize("@accessControlService.canEditUser(#id)")
     public String grantAccessEditUserApps(@PathVariable String id, ApplicationsForm applicationsForm, Model model,
-            HttpSession session) {
+                                          HttpSession session, Authentication authentication) {
+        UserProfile editorUserProfile = loginService.getCurrentProfile(authentication);
         UserProfileDto user = userService.getUserProfileById(id).orElseThrow();
         UserType userType = user.getUserType();
         Set<AppDto> userAssignedApps = userService.getUserAppsByUserId(id);
         List<AppDto> availableApps = userService.getAppsByUserType(userType);
 
+        List<AppDto> editableApps = availableApps.stream()
+                .filter(app -> roleAssignmentService.canUserAssignRolesForApp(editorUserProfile, app))
+                .toList();
+
         // Add selected attribute to available apps based on user assigned apps
-        availableApps.forEach(app -> {
+        editableApps.forEach(app -> {
             app.setSelected(userAssignedApps.stream()
                     .anyMatch(userApp -> userApp.getId().equals(app.getId())));
         });
 
         model.addAttribute("user", user);
-        model.addAttribute("apps", availableApps);
+        model.addAttribute("apps", editableApps);
 
         // Store the model in session to handle validation errors later
         session.setAttribute("grantAccessUserAppsModel", model);
@@ -1266,7 +1305,6 @@ public class UserController {
             @Valid ApplicationsForm applicationsForm, BindingResult result,
             Authentication authentication,
             Model model, HttpSession session) {
-
         if (result.hasErrors()) {
             log.debug("Validation errors occurred while selecting apps: {}", result.getAllErrors());
             // If there are validation errors, return to the apps page with errors
@@ -1291,9 +1329,14 @@ public class UserController {
         // If no apps are selected, persist empty roles to database and redirect to
         // manage user page
         if (selectedApps.isEmpty()) {
+            UserProfile editorUserProfile = loginService.getCurrentProfile(authentication);
             // Update user to have no roles (empty list)
             CurrentUserDto currentUserDto = loginService.getCurrentUser(authentication);
-            Map<String, String> updateResult = userService.updateUserRoles(id, new ArrayList<>(), currentUserDto.getUserId());
+            List<String> nonEditableRoles = userService.getUserAppRolesByUserId(id).stream()
+                    .filter(role -> !roleAssignmentService.canUserAssignRolesForApp(editorUserProfile, role.getApp()))
+                    .map(AppRoleDto::getId)
+                    .toList();
+            Map<String, String> updateResult = userService.updateUserRoles(id, new ArrayList<>(), nonEditableRoles, currentUserDto.getUserId());
             UserProfileDto userProfileDto = userService.getUserProfileById(id).orElse(null);
             UpdateUserAuditEvent updateUserAuditEvent = new UpdateUserAuditEvent(
                     userProfileDto != null ? userProfileDto.getId() : null,
@@ -1323,16 +1366,18 @@ public class UserController {
             Authentication authentication,
             Model model, HttpSession session) {
 
+        UserProfile editorUserProfile = loginService.getCurrentProfile(authentication);
         final UserProfileDto user = userService.getUserProfileById(id).orElseThrow();
         List<String> selectedApps = getListFromHttpSession(session, "grantAccessSelectedApps", String.class)
                 .orElseGet(() -> {
                     // If no selectedApps in session, get user's current apps
-                    Set<AppDto> userApps = userService.getUserAppsByUserId(id);
-                    List<String> userAppIds = userApps.stream()
+                    List<String> userApps = userService.getUserAppsByUserId(id)
+                            .stream()
+                            .filter(app -> roleAssignmentService.canUserAssignRolesForApp(editorUserProfile, app))
                             .map(AppDto::getId)
-                            .collect(Collectors.toList());
-                    session.setAttribute("grantAccessSelectedApps", userAppIds);
-                    return userAppIds;
+                            .toList();
+                    session.setAttribute("grantAccessSelectedApps", userApps);
+                    return userApps;
                 });
 
         // Ensure the selectedAppIndex is within bounds
@@ -1357,7 +1402,7 @@ public class UserController {
         List<AppRoleDto> roles = userService.getAppRolesByAppIdAndUserType(selectedApps.get(currentSelectedAppIndex),
                 user.getUserType());
         UserProfile editorProfile = loginService.getCurrentProfile(authentication);
-        roles = roleAssignmentService.filterRoles(editorProfile.getAppRoles(), roles);
+        roles = roleAssignmentService.filterRoles(editorProfile.getAppRoles(), roles.stream().map(role -> UUID.fromString(role.getId())).toList());
         List<AppRoleDto> userRoles = userService.getUserAppRolesByUserId(id);
 
         AppDto currentApp = userService.getAppByAppId(selectedApps.get(currentSelectedAppIndex)).orElseThrow();
@@ -1453,6 +1498,7 @@ public class UserController {
         // Add the roles for the currently selected app to a map for lookup.
         allSelectedRolesByPage.put(selectedAppIndex, rolesForm.getRoles());
         if (selectedAppIndex >= selectedApps.size() - 1) {
+            UserProfile currentUserProfile = loginService.getCurrentProfile(authentication);
             // Clear the grantAccessUserRolesModel and page roles from session to avoid
             // stale data
             session.removeAttribute("grantAccessUserRolesModel");
@@ -1461,10 +1507,14 @@ public class UserController {
             List<String> allSelectedRoles = allSelectedRolesByPage.values().stream().filter(Objects::nonNull)
                     .flatMap(List::stream)
                     .toList();
+            List<String> nonEditableRoles = userService.getUserAppRolesByUserId(id).stream()
+                    .filter(role -> !roleAssignmentService.canUserAssignRolesForApp(currentUserProfile, role.getApp()))
+                    .map(AppRoleDto::getId)
+                    .toList();
             CurrentUserDto currentUserDto = loginService.getCurrentUser(authentication);
             UserProfile editorProfile = loginService.getCurrentProfile(authentication);
             if (roleAssignmentService.canAssignRole(editorProfile.getAppRoles(), allSelectedRoles)) {
-                Map<String, String> updateResult = userService.updateUserRoles(id, allSelectedRoles, currentUserDto.getUserId());
+                Map<String, String> updateResult = userService.updateUserRoles(id, allSelectedRoles, nonEditableRoles, currentUserDto.getUserId());
                 UpdateUserAuditEvent updateUserAuditEvent = new UpdateUserAuditEvent(
                         editorProfile.getId(),
                         currentUserDto,
@@ -1620,14 +1670,18 @@ public class UserController {
      */
     @GetMapping("/users/grant-access/{id}/check-answers")
     @PreAuthorize("@accessControlService.canEditUser(#id)")
-    public String grantAccessCheckAnswers(@PathVariable String id, Model model) {
+    public String grantAccessCheckAnswers(@PathVariable String id, Model model, Authentication authentication) {
+        UserProfile editorUserProfile = loginService.getCurrentProfile(authentication);
         UserProfileDto user = userService.getUserProfileById(id).orElseThrow();
 
         // Get user's current app roles
         List<AppRoleDto> userAppRoles = userService.getUserAppRolesByUserId(id);
+        List<AppRoleDto> editableUserAppRoles = userAppRoles.stream()
+                .filter(role -> roleAssignmentService.canUserAssignRolesForApp(editorUserProfile, role.getApp()))
+                .toList();
 
         // Group roles by app name and sort by app name
-        Map<String, List<AppRoleDto>> groupedAppRoles = userAppRoles.stream().sorted()
+        Map<String, List<AppRoleDto>> groupedAppRoles = editableUserAppRoles.stream().sorted()
                 .collect(Collectors.groupingBy(
                         appRole -> appRole.getApp().getName(),
                         LinkedHashMap::new, // Preserve insertion order
@@ -1645,7 +1699,7 @@ public class UserController {
         List<OfficeDto> userOffices = userService.getUserOfficesByUserId(id);
 
         model.addAttribute("user", user);
-        model.addAttribute("userAppRoles", userAppRoles);
+        model.addAttribute("userAppRoles", editableUserAppRoles);
         model.addAttribute("groupedAppRoles", sortedGroupedAppRoles);
         model.addAttribute("userOffices", userOffices);
         model.addAttribute("externalUser", user.getUserType() == UserType.EXTERNAL);
@@ -1764,8 +1818,14 @@ public class UserController {
      * specific users
      */
     @ExceptionHandler({ AuthorizationDeniedException.class, AccessDeniedException.class })
-    public RedirectView handleAuthorizationException(Exception ex, HttpSession session) {
-        log.warn("Authorization denied while accessing user: {}", ex.getMessage());
+    public RedirectView handleAuthorizationException(Exception ex, HttpSession session,
+            HttpServletRequest request) {
+        Object requestedPath = session != null ? session.getAttribute("SPRING_SECURITY_SAVED_REQUEST") : null;
+        String uri = request != null ? request.getRequestURI() : "unknown";
+        String method = request != null ? request.getMethod() : "unknown";
+        String referer = request != null ? request.getHeader("Referer") : null;
+        log.warn("Authorization denied while accessing user: reason='{}', method='{}', uri='{}', referer='{}', savedRequest='{}'",
+                ex.getMessage(), method, uri, referer, requestedPath);
         return new RedirectView("/not-authorised");
     }
 
